--- a/front/src/chunks/SliderManagement/SliderManagement.scss
+++ b/front/src/chunks/SliderManagement/SliderManagement.scss
@@ -4,6 +4,24 @@
 .slider-management-container {
   @include m.top-left-indents;
 
+  .hidden {
+    display: none;
+  }
+
+  input,
+  textarea {
+    background: transparent;
+    padding: 3px 0;
+    overflow: hidden;
+    color: white;
+    z-index: f.z-index(layer-front-5);
+    font-weight: bold;
+
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.6);
+    }
+  }
+
   border: 1px solid #d8e0e7;
   border-radius: 1rem;
   padding: 3rem;
@@ -11,32 +29,161 @@
   .banner-image-editor {
     @include m.top-left-indents;
 
-    .control {
+    .body1 {
       margin-bottom: 1rem;
+    }
 
-      button {
-        border: 1px solid black;
-        border-radius: 12px;
-        padding: 3px 7px;
+    .control {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      margin-bottom: 0.5rem;
+
+      .control-items {
+        display: flex;
+
+        & > *:not(:last-child) {
+          margin-right: 0.5rem;
+        }
+      }
+
+      input[type='color'] {
+        -webkit-appearance: none;
+        border: none;
+        width: 30px;
+        height: 30px;
+        padding: 0;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
+      input[type='color']::-webkit-color-swatch-wrapper {
+        padding: 0;
+      }
+
+      input[type='color']::-webkit-color-swatch {
+        border: none;
+        padding: 0;
+      }
+
+      .choose-background {
+        display: flex;
+
+        .bg-label {
+          border: 1px solid black;
+          padding: 3px 7px;
+          font-size: 1.2rem;
+          cursor: pointer;
+          line-height: 2.5rem;
+          display: inline-block;
+        }
       }
     }
 
-    .preview {
-      height: 24rem;
+    .logo-preview {
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+      width: 25%;
+      height: 50px;
+      border: 1px dashed black;
+      background-color: rgba(255, 255, 255, 0.6);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center center;
+
+      label {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5rem;
+
+        &.logo-file-label::after {
+          content: '로고 파일을 입력해주세요.';
+        }
+      }
+
+      .chosen-logo {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+
+      & > * {
+        cursor: pointer;
+      }
+    }
+
+    .background-preview {
+      z-index: 10000;
+      background-image: url('https://babble.gg/img/temporary/kartrider-bg.png');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+      min-height: 32rem;
+      height: 100%;
       width: 100%;
-      border: 1px solid grey;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      padding: 1rem 3rem;
+      padding: 2rem 3rem;
+      position: relative;
+
+      .gradient {
+        position: absolute;
+        height: 100%;
+        min-width: 25rem;
+        width: 55%;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        clip-path: polygon(0% 0%, 100% 0%, 70% 100%, 0% 100%);
+
+        background-image: linear-gradient(
+          90deg,
+          #4c5eff 0%,
+          rgba(255, 255, 255, 0) 80%,
+          rgba(255, 255, 255, 0) 100%
+        );
+      }
 
       .register {
-        border-bottom: 1px solid black;
         font-size: 2rem;
         display: block;
         margin-bottom: 1rem;
         width: 20%;
-        min-width: 20rem;
+        min-width: 16rem;
+
+        &.tag {
+          font-size: 1.9rem;
+          font-weight: normal;
+        }
+
+        &.alert {
+          font-size: 1.6rem;
+          padding: 0.5rem;
+          border-radius: 10rem;
+          text-align: center;
+          text-transform: uppercase;
+          background-color: f.primary(babble-pink);
+          box-shadow: 0px 0px 3px 3px rgb(0 0 0 / 15%);
+        }
+      }
+
+      .tags-container {
+        z-index: f.z-index(layer-front-5);
+        display: flex;
+
+        .tags {
+          font-size: 1.9rem;
+          color: white;
+          display: inline-block;
+          line-height: 30px;
+          margin-right: 1rem;
+          font-weight: 500;
+        }
       }
 
       .main-text-register {
@@ -44,10 +191,6 @@
         resize: none;
         width: 40%;
         min-width: 40rem;
-
-        &:focus {
-          border: 1px solid black;
-        }
       }
     }
   }
